tests/specs/run/package_json_type/none/main_esm.out
error: Uncaught SyntaxError: The requested module './add.js' does not provide an export named 'add'
import { add } from "./add.js";
         ^
    at <anonymous> (file:///[WILDLINE])
